--- a/app/static/manifest.json
+++ b/app/static/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
-  "theme_color": "#1f6feb",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "static/images/icon.png",
